IT and unit tests (work in progress)